将token的生成与校验提出

--- a/miaosha-gateway/src/main/resources/application.yml
+++ b/miaosha-gateway/src/main/resources/application.yml
@@ -4,9 +4,5 @@ server:
     context-path: /credit-auth
 spring:
   application:
-    name: miaosha_gateway
-  security:
-    user:
-      name: admin
-      password: 123456
+    name: miaosha-gateway
 
