--- a/miaosha-service/pom.xml
+++ b/miaosha-service/pom.xml
@@ -64,7 +64,11 @@
             <artifactId>commons-collections4</artifactId>
             <version>4.4</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.farmer</groupId>
+            <artifactId>miaosha-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
