--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>miaosha-service</module>
         <module>miaosha-gateway</module>
         <module>common-jwt</module>
+        <module>miaosha-common</module>
     </modules>
     <properties>
         <java.version>1.8</java.version>
