--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <fastjson.version>1.2.62</fastjson.version>
         <swagger.version>2.7.0</swagger.version>
         <spring-cloud.version>2.2.2.RELEASE</spring-cloud.version>
+        <caffeine.version>2.8.0</caffeine.version>
+
     </properties>
 
     <dependencies>
@@ -49,12 +51,18 @@
                 <artifactId>spring-boot-starter-validation</artifactId>
                 <version>${spring-cloud.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-cache</artifactId>
+                <version>${spring-cloud.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis-starter.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
@@ -89,6 +97,13 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/com.github.ben-manes.caffeine/caffeine -->
+            <dependency>
+                <groupId>com.github.ben-manes.caffeine</groupId>
+                <artifactId>caffeine</artifactId>
+                <version>${caffeine.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
