--- a/miaosha-service/src/main/resources/application-dev.yml
+++ b/miaosha-service/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.1.105:3306/miaosha?useSSL=false&characterEncoding=utf8
+    url: jdbc:mysql://192.168.1.105:3306/miaosha?useSSL=false&characterEncoding=utf8&userAffectRows=true
     username: Sun
     password: "!Jwj203526"
     druid:
