--- a/miaosha-service/src/main/resources/application.yml
+++ b/miaosha-service/src/main/resources/application.yml
@@ -3,6 +3,16 @@ server:
 spring:
   profiles:
     active: dev
+  redis:
+    host: 192.168.1.105
+    database: 10
+    port: 6379
+    lettuce:
+      pool:
+        max-active: 8
+        max-idle: 2
+        max-wait: -1
+
 #  mvc:
 #    throw-exception-if-no-handler-found: true
 #  resources:
