--- a/miaosha-service/src/main/resources/application.yml
+++ b/miaosha-service/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        ip: 192.168.1.105
+        server-addr: 192.168.1.105:8848
 
 #  mvc:
 #    throw-exception-if-no-handler-found: true
