--- a/miaosha-common/pom.xml
+++ b/miaosha-common/pom.xml
@@ -11,6 +11,13 @@
 
     <artifactId>miaosha-common</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>com.github.dozermapper</groupId>
+            <artifactId>dozer-spring-boot-starter</artifactId>
+            <version>6.5.0</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
