--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -7,10 +7,10 @@
         <artifactId>sun</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.farmer</groupId>
-    <artifactId>product-service</artifactId>
+    <groupId>com.farmer.order</groupId>
+    <artifactId>order-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>product-service</name>
+    <name>order-service</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -18,7 +18,6 @@
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
@@ -159,4 +158,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
